<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="sample">Sample</string>
    <string name="fetching_movies">Fetching Movies</string>
    <string name="no_network">Network Not Available</string>
    <string name="popular">Get Popular</string>
    <string name="top_rated">Get Top Rated</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="overview">Plot Synopsis</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="favorites">Get Favorites</string>
    <string name="no_favorites">No Favorite Movies</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="trailer">Trailer</string>
    <string name="review">Review</string>
</resources>
