<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.asura.popularmovies.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textColor="@color/textColor"
                    android:textStyle="bold" />

                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:id="@+id/favorite"
                    android:layout_marginLeft="@dimen/cardview_default_radius"
                    android:layout_marginTop="-8dp"
                    app:mfb_animate_favorite="true"
                    app:mfb_animate_unfavorite="false"
                    app:mfb_padding="12"
                    app:mfb_favorite_image="@drawable/ic_favorite_white_24dp"
                    app:mfb_not_favorite_image="@drawable/ic_favorite_border_white_24dp"
                    app:mfb_size="48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:id="@+id/movie_Thumbnail"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/movie_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/movie_release_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sample"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/movie_Thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/text" />

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/sample"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/movie_Thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_Thumbnail" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="24dp"
                android:maxLines="6"
                android:scrollbars="vertical"
                android:text="@string/sample"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/movie_Thumbnail"
                app:layout_constraintTop_toTopOf="@+id/movie_Thumbnail" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/movie_Thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_data" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>
